<resources>
    <string name="app_name">MY BANQUE</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password1">Password</string>
    <string name="prompt_password2">Re-enter your password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_title_text">Register</string>
    <string name="login_title_text">Login</string>
    <string name="title_regis">Summary</string>
    <string name="camembert_description">expenses camembert</string>
    <string name="camembert_desc">Breakdown of last expenses</string>
    <string name="graph_desc">Evolution over the last month</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="add_bank">Connect to your bank</string>
    <string name="ca_logo">Crédit agricole logo</string>
    <string name="linkCA">https://www.credit-agricole.fr/</string>
</resources>