<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Settings">

    <TextView
        android:id="@+id/title_settings"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title_settings"
        android:textAppearance="@style/title_regis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/add_bank"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="72dp"
        android:text="@string/add_bank"
        android:textAppearance="@style/image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_settings" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="53dp"
        android:contentDescription="@string/ca_logo"
        app:layout_constraintBottom_toBottomOf="@+id/add_bank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toEndOf="@+id/add_bank"
        app:layout_constraintTop_toTopOf="@+id/add_bank"
        app:srcCompat="@drawable/CA_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>