<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_summary"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title_regis"
        android:textAppearance="@style/title_regis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/camembert"
        android:layout_width="0dp"
        android:layout_height="213dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/camembert_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_summary"
        app:srcCompat="@drawable/camembert"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/settings_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_icon"
        android:onClick="openSettingsPage"/>

    <TextView
        android:id="@+id/camembert_desc"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:text="@string/camembert_desc"
        android:textAppearance="@style/image_description"
        app:layout_constraintBottom_toTopOf="@+id/summary_graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camembert" />

    <TextView
        android:id="@+id/graph_desc"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/graph_desc"
        android:textAppearance="@style/image_description"
        app:layout_constraintBottom_toTopOf="@+id/ellipse_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_graph" />

    <ImageView
        android:id="@+id/summary_graph"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/ellipse_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_summary"
        app:srcCompat="@drawable/graphique_summary" />

    <View
        android:id="@+id/rectangle_button_expenses"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_button_expenses"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rectangle_button_income"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/rectangle_button_income"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_button_income"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/rectangle_button_expenses" />

    <TextView
        android:id="@+id/expenses_text"
        android:layout_width="141dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/expenses"
        android:textAppearance="@style/already_acc"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_button_expenses"
        app:layout_constraintStart_toStartOf="@+id/rectangle_button_expenses"
        app:layout_constraintTop_toTopOf="@+id/rectangle_button_expenses" />

    <TextView
        android:id="@+id/income_text"
        android:layout_width="141dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/income"
        android:textAppearance="@style/already_acc"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_button_income"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_button_income"
        app:layout_constraintStart_toEndOf="@+id/rectangle_button_expenses"
        app:layout_constraintTop_toTopOf="@+id/rectangle_button_income" />

    <TextView
        android:id="@+id/home_text"
        android:layout_width="141dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/home"
        android:textAppearance="@style/already_acc"
        android:translationZ="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ellipse_home" />

    <View
        android:id="@+id/ellipse_home"
        android:layout_width="96dp"
        android:layout_height="97dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="-40dp"
        android:background="@drawable/ellipse_home"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/income_text"
        app:layout_constraintStart_toStartOf="@+id/expenses_text"
        app:layout_constraintTop_toTopOf="@+id/rectangle_button_expenses" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="68dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/disconnect_button" />

</androidx.constraintlayout.widget.ConstraintLayout>